testimonial section, mobile done

--- a/index.html
+++ b/index.html
@@ -231,6 +231,28 @@
     </div>
 
 
+    <!-- Testimonial Section -->
+    <div class="bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p">
+
+        <div class="w-[85%] mx-auto">
+
+            <!-- Card -->
+            <div class="flex flex-col items-center text-center gap-5">
+                <img src="/assets/img/customer1.jpeg" alt="Customer Picture" class="rounded-full w-272p h-272p mb-5">
+
+                <h5 class="text-co-h3-bold">What our customers thought?</h5>
+                <p class="text-base">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. </p>
+                <span class="text-co-button mb-2.5">Holly Davidson</span>
+
+                <div class="flex flex-row justify-center gap-10">
+                    <button><img src="/assets/img/arrow-l.svg" alt="Previous"></button>
+                    <button><img src="/assets/img/arrow-r.svg" alt="Next"></button>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 
 
 </div>
