--- a/index.html
+++ b/index.html
@@ -232,19 +232,19 @@
 
 
     <!-- Testimonial Section -->
-    <div class="bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p mb-10">
+    <div class="bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p mb-10 lg:mb-170p lg:py-100p">
 
         <div class="w-[85%] mx-auto">
 
             <!-- Card -->
-            <div class="flex flex-col items-center gap-10">
+            <div class="flex flex-col lg:flex-row items-center gap-10 lg:gap-72p lg:justify-center">
 
-                <img src="/assets/img/customer1.jpeg" alt="Customer Picture" class="rounded-full w-272p h-272p">
+                <img src="/assets/img/customer1.jpeg" alt="Customer Picture" class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3">
 
-                <div class="flex flex-col items-center text-center gap-5">
-                    <h5 class="text-co-h3-bold">What our customers thought?</h5>
-                    <p class="text-base">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. </p>
-                    <span class="text-co-button mb-2.5">Holly Davidson</span>
+                <div class="flex flex-col items-center lg:items-start text-center lg:text-start gap-5 lg:basis-2/3 lg:mb-5">
+                    <h4 class="text-co-h3-bold lg:text-co-h4">What our customers thought?</h4>
+                    <p class="text-base lg:text-co-h5">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. </p>
+                    <span class="text-co-button mb-2.5 lg:mb-5">Holly Davidson</span>
 
                     <div class="flex flex-row justify-center gap-10">
                         <button><img src="/assets/img/arrow-l.svg" alt="Previous"></button>
