Section 3, Desktop & mobile done

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </div>
 
-
+    <!-- Section 1 -->
     <div class="rounded-mobile lg:rounded-desktop bg-co-yellow mb-10 lg:mb-150p">
         <div class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
             <div class="lg:flex-1 flex justify-center">
@@ -258,6 +258,83 @@
 
     </div>
 
+    <!-- Section 3 -->
+    <div class="rounded-mobile lg:rounded-desktop bg-co-white mb-10 lg:mb-180p">
+        <div class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-118p">
+            <div class="lg:flex-1 flex justify-center">
+                <img src="assets/img/vector2.svg" alt=" " width="714" height="714">
+            </div>
+
+            <!-- Info box -->
+            <div class="lg:flex-1 flex justify-center lg:justify-start">
+                <div class="flex flex-col gap-30p lg:gap-50p items-center lg:items-start text-center lg:text-left">
+                    <h1 class="text-co-mo-h1 lg:text-co-h4">Cursus Integer consequat Tristique. </h1>
+                    <div class="flex flex-col gap-3 text-co-dark">
+
+                        <!-- Pills -->
+                        <div class="flex flex-col lg:flex-row items-center lg:justify-start gap-3.5 flex-wrap justify-center">
+                            <div class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
+                                <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
+                                          fill="#F9B800"/>
+                                </svg>
+                                Cursus Integer
+                            </div>
+
+                            <div class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
+                                <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
+                                          fill="#F9B800"/>
+                                </svg>
+                                Integer Consequat
+                            </div>
+
+                            <div class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
+                                <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
+                                          fill="#F9B800"/>
+                                </svg>
+                                Tellus Euismod Pellentesque
+                            </div>
+
+                            <div class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
+                                <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
+                                          fill="#F9B800"/>
+                                </svg>
+                                Aliquot Tristique
+                            </div>
+
+                            <div class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
+                                <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
+                                          fill="#F9B800"/>
+                                </svg>
+                                Pellentesque Tempus
+                            </div>
+
+                            <div class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
+                                <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
+                                          fill="#F9B800"/>
+                                </svg>
+                                Mauris Fermentum Praesent
+                            </div>
+                        </div>
+
+                    </div>
+                    <button class="flex justify-center items-center text-co-button text-co-white lg:text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark lg:bg-co-yellow gap-16">
+                        Lorem Ipsum
+                        <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                                  fill="#FFFFFF"/> #todo better solution for fill color
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 </div>
 
