FAQ accordion, responsive done, transitions in process

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                         Lorem Ipsum
                         <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
-                                  fill="#FFFFFF"/> #todo better solution for fill color
+                                  fill="#FFFFFF"/>
                         </svg>
                     </button>
                 </div>
@@ -335,6 +335,75 @@
 
         </div>
     </div>
+
+    <!-- FAQ Section-->
+    <div class="flex flex-col items-center mb-10 lg:mb-172p">
+
+        <!-- Info box -->
+        <div class="flex flex-col gap-5 lg:gap-3 text-center items-center mb-52p mb-60p">
+            <h3 class="text-co-mo-h1 lg:text-co-h3">Phasellus a vitae iaculis magna.</h3>
+            <h5 class="text-base lg:text-co-h5">Phasellus a vitae iaculis magna eleifend pulvinar velit odio.</h5>
+        </div>
+
+        <!-- Accordion -->
+        <div class="overflow-hidden flex flex-col gap-3.5 lg:gap-6">
+
+            <!-- item 1 -->
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
+                <div class="w-[90%] mx-auto overflow-hidden">
+                    <input type="checkbox" id="chk1">
+                    <label for="chk1" class="flex flex-row justify-between cursor-pointer">
+                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p> #Todo after click - text-co-h3-bold
+                        <img src="/assets/img/icon-plus.svg" alt=" ">
+                        <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
+                    </label>
+                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
+                </div>
+            </div>
+
+            <div class="bg-co-white rounded-mobile py-30p">
+                <div class="w-[85%] mx-auto overflow-hidden">
+
+                    <input type="checkbox" id="chk2">
+                    <label for="chk2" class="flex flex-row justify-between gap-5 cursor-pointer">
+                        <p class="text-co-mo-h2-bold">Vulputate et vulputate suspendisse natoque id tellus consectetur pulvinar et. </p>
+                        <img src="/assets/img/icon-plus.svg" alt=" ">
+                        <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
+                    </label>
+                    <div class="faq-item-content text-co-p2 p-0 transition-all ease-in-out">Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
+                </div>
+            </div>
+
+            <div class="bg-co-white rounded-mobile py-30p">
+                <div class="w-[85%] mx-auto overflow-hidden">
+
+                    <input type="checkbox" id="chk3">
+                    <label for="chk3" class="flex flex-row justify-between gap-5 cursor-pointer">
+                        <p class="text-co-mo-h2-bold">Pellentesque tempus sed phasellus vel.</p>
+                        <img src="/assets/img/icon-plus.svg" alt=" ">
+                        <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
+                    </label>
+                    <div class="faq-item-content text-co-p2 p-0 transition-all ease-in-out">Euismod magna id purus eget nunc ligula suspendisse dui netus. Mauris fermentum praesent tellus euismod.</div>
+                </div>
+            </div>
+
+            <div class="bg-co-white rounded-mobile py-30p">
+                <div class="w-[85%] mx-auto overflow-hidden">
+
+                    <input type="checkbox" id="chk4">
+                    <label for="chk4" class="flex flex-row justify-between gap-5 cursor-pointer">
+                        <p class="text-co-mo-h2-bold">Mauris fermentum praesent tellus euismod pellentesque urna ac massa in. </p>
+                        <img src="/assets/img/icon-plus.svg" alt=" ">
+                        <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
+                    </label>
+                    <div class="faq-item-content text-co-p2 p-0 transition-all ease-in-out">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
 
 </div>
 
