Footer desktop done

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="w-[90%] mx-auto overflow-hidden">
                     <input type="checkbox" id="chk1">
                     <label for="chk1" class="flex flex-row justify-between cursor-pointer">
-                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p> #Todo after click - text-co-h3-bold
+                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
                         <img src="/assets/img/icon-plus.svg" alt=" ">
                         <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
                     </label>
@@ -402,6 +402,34 @@
 
         </div>
 
+    </div>
+
+    <!-- Footer -->
+    <div class="rounded-mobile lg:rounded-desktop bg-co-dark text-co-white lg:py-20 lg:px-50p">
+        <div class="flex flex-col lg:gap-10">
+
+            <div class="flex justify-between lg:py-8 lg:mb-90p">
+                <h4 class=" lg:text-co-h4">Vulputate et pulvinar ethre Suspendisse tellus consecteur</h4>
+                <button class="flex justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+                    Lorem Ipsum
+                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                              fill="#262626"/>
+                    </svg>
+                </button>
+            </div>
+            <hr class="lg:mb-50p bg-co-white-12">
+            <div class="flex justify-between lg:px-11">
+                <p>Copyright © 2022 Lorem Ipsum.</p>
+                <div>
+                    <ul class="flex flex-end">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
     </div>
 
 
