--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
                     <input type="checkbox" id="chk4">
                     <label for="chk4" class="flex flex-row justify-between gap-5 cursor-pointer">
-                        <p class="text-co-mo-h2-bold">Mauris fermentum praesent tellus euismod pellentesque urna ac massa in. </p>
+                        <p class="text-co-mo-h2">Mauris fermentum praesent tellus euismod pellentesque urna ac massa in. </p>
                         <img src="/assets/img/icon-plus.svg" alt=" ">
                         <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
                     </label>
