--- a/index.html
+++ b/index.html
@@ -361,42 +361,39 @@
                 </div>
             </div>
 
-            <div class="bg-co-white rounded-mobile py-30p">
-                <div class="w-[85%] mx-auto overflow-hidden">
-
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
+                <div class="w-[90%] mx-auto overflow-hidden">
                     <input type="checkbox" id="chk2">
-                    <label for="chk2" class="flex flex-row justify-between gap-5 cursor-pointer">
-                        <p class="text-co-mo-h2-bold">Vulputate et vulputate suspendisse natoque id tellus consectetur pulvinar et. </p>
+                    <label for="chk2" class="flex flex-row justify-between cursor-pointer">
+                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
                         <img src="/assets/img/icon-plus.svg" alt=" ">
                         <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
                     </label>
-                    <div class="faq-item-content text-co-p2 p-0 transition-all ease-in-out">Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
+                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
                 </div>
             </div>
 
-            <div class="bg-co-white rounded-mobile py-30p">
-                <div class="w-[85%] mx-auto overflow-hidden">
-
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
+                <div class="w-[90%] mx-auto overflow-hidden">
                     <input type="checkbox" id="chk3">
-                    <label for="chk3" class="flex flex-row justify-between gap-5 cursor-pointer">
-                        <p class="text-co-mo-h2-bold">Pellentesque tempus sed phasellus vel.</p>
+                    <label for="chk3" class="flex flex-row justify-between cursor-pointer">
+                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
                         <img src="/assets/img/icon-plus.svg" alt=" ">
                         <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
                     </label>
-                    <div class="faq-item-content text-co-p2 p-0 transition-all ease-in-out">Euismod magna id purus eget nunc ligula suspendisse dui netus. Mauris fermentum praesent tellus euismod.</div>
+                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
                 </div>
             </div>
 
-            <div class="bg-co-white rounded-mobile py-30p">
-                <div class="w-[85%] mx-auto overflow-hidden">
-
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
+                <div class="w-[90%] mx-auto overflow-hidden">
                     <input type="checkbox" id="chk4">
-                    <label for="chk4" class="flex flex-row justify-between gap-5 cursor-pointer">
-                        <p class="text-co-mo-h2">Mauris fermentum praesent tellus euismod pellentesque urna ac massa in. </p>
+                    <label for="chk4" class="flex flex-row justify-between cursor-pointer">
+                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
                         <img src="/assets/img/icon-plus.svg" alt=" ">
                         <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
                     </label>
-                    <div class="faq-item-content text-co-p2 p-0 transition-all ease-in-out">Euismod magna id purus eget nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
+                    <div class="faq-item-content text-co-p2 lg:text-co-h5 p-0 transition-all ease-in-out">Nunc ligula suspendisse dui netus. Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. Mauris fermentum praesent tellus euismod.</div>
                 </div>
             </div>
 
@@ -405,12 +402,12 @@
     </div>
 
     <!-- Footer -->
-    <div class="rounded-mobile lg:rounded-desktop bg-co-dark text-co-white lg:py-20 lg:px-50p">
-        <div class="flex flex-col lg:gap-10">
+    <div class="rounded-mobile lg:rounded-desktop  bg-co-dark text-co-white lg:py-20 lg:px-50p mb-10 lg:mb-100p lg:pt-14 lg:pb-9 lg:px-1">
+        <div class="flex flex-col w-[90%] mx-auto">
 
-            <div class="flex justify-between lg:py-8 lg:mb-90p">
-                <h4 class=" lg:text-co-h4">Vulputate et pulvinar ethre Suspendisse tellus consecteur</h4>
-                <button class="flex justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+            <div class="flex lg:justify-between items-center justify-center lg:px-8 lg:mb-90p">
+                <h4 class="basis-7/12 lg:text-co-h4">Vulputate et pulvinar ethre Suspendisse tellus consecteur</h4>
+                <button class="basis-4/12 flex w-[50%] justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
                     Lorem Ipsum
                     <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
