--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@
     </div>
 
     <!-- Footer -->
-    <div class="rounded-mobile lg:rounded-desktop  bg-co-dark text-co-white lg:py-20 lg:px-50p mb-10 lg:mb-100p lg:pt-14 lg:pb-9 lg:px-1">
-        <div class="flex flex-col w-[90%] mx-auto">
+    <div class="rounded-mobile lg:rounded-desktop  bg-co-dark text-co-white lg:py-20 lg:px-50p mb-10 lg:mb-100p pt-14 pb-9 px-1">
+        <div class="flex flex-col w-[90%] mx-auto gap-10 lg:gap-0">
 
-            <div class="flex lg:justify-between items-center justify-center lg:px-8 lg:mb-90p">
-                <h4 class="basis-7/12 lg:text-co-h4">Vulputate et pulvinar ethre Suspendisse tellus consecteur</h4>
-                <button class="basis-4/12 flex w-[50%] justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+            <div class="flex flex-col lg:flex-row gap-30p text-center lg:text-start lg:justify-between items-center justify-center lg:px-8 lg:mb-90p">
+                <h4 class="lg:basis-7/12 text-co-h3-bold lg:text-co-h4 w-[90%] lg:w-auto">Vulputate et pulvinar ethre Suspendisse tellus consecteur</h4>
+                <button class="lg:basis-4/12 flex justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-yellow lg:bg-co-white gap-16 w-full lg:w-auto ">
                     Lorem Ipsum
                     <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
@@ -416,12 +416,12 @@
                 </button>
             </div>
             <hr class="lg:mb-50p bg-co-white-12">
-            <div class="flex justify-between lg:px-11">
+            <div class="flex flex-col items-center lg:flex-row justify-between lg:px-11 gap-7p lg:gap-0">
                 <p>Copyright © 2022 Lorem Ipsum.</p>
                 <div>
                     <ul class="flex flex-end">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms and Conditions</a></li>
+                        <li class="pr-1.5"><a href="#">Privacy Policy </a></li>
+                        <li><a href="#"> Terms and Conditions</a></li>
                     </ul>
                 </div>
             </div>
