--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
 
     <!--    <script src="dist/script.js"></script>-->
 
-    <style>
-        option {
-            background-repeat: no-repeat;
-            background-position: 0 50%;
-            padding-left: 2rem;
-        }
-
-        option[value='en'] {
-            background-image: url(assets/img/flag-en.svg);
-        }
-    </style>
 </head>
 <body class="bg-co-bg2">
 <div class="co-container mx-auto">
@@ -43,7 +32,7 @@
     <div class="h-1p w-full bg-co-dark-12 mb-16 lg:mb-148p"></div>
 
     <!--Hero Section-->
-    <div class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto mb-10 lg:mb-172p">
+    <div class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto mb-10 lg:mb-172p w-[90%] lg:w-auto mx-auto">
         <div class="flex flex-col gap-3.5 items-center text-center">
             <h5 class="uppercase text-co-mo-h5-capital lg:text-co-h5-capital text-co-yellow">risus praesent
                 vulputate.</h5>
@@ -100,14 +89,20 @@
                 Mauris Fermentum Praesent
             </div>
         </div>
+
         <div class="flex justify-center">
-            <button class="flex justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-yellow gap-16">
+
+            <button class="flex flex-row justify-between items-center rounded-full bg-co-yellow text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
                 Lorem Ipsum
-                <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                <svg class="hidden lg:block" width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path class="fill-co-dark" d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
                           fill="#262626"/>
                 </svg>
+                <svg class="block lg:hidden" width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path class="fill-co-dark" d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z" fill="#262626"/>
+                </svg>
             </button>
+
         </div>
     </div>
 
@@ -131,11 +126,14 @@
                             blandit rutrum at mauris enim pulvinar duis etiam duis vulputate et vulputate suspendisse
                             natoque id tellus consectetur pulvinar et. </p>
                     </div>
-                    <button class="flex justify-center items-center text-co-button text-co-white pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark gap-16">
+                    <button class="flex flex-row justify-between items-center rounded-full bg-co-dark text-co-white w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
                         Lorem Ipsum
-                        <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
-                                  fill="#FFFFFF"/>
+                        <svg class="hidden lg:block" width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-co-white" d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                                  fill="#262626"/>
+                        </svg>
+                        <svg class="block lg:hidden" width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-co-white" d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z" fill="#262626"/>
                         </svg>
                     </button>
                 </div>
@@ -210,23 +208,23 @@
             </div>
 
             <!-- info button box -->
-            <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start">
+            <div class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start w-[90%] lg:w-auto mx-auto">
                 <p class="text-co-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque mattis.
                     Consectetur nibh velit magna consectetur leo. </p>
                 <h1 class="text-co-mo-h1 lg:text-co-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam Tristique. </h1>
-                <button class="flex items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-white gap-16">
+                <button class="flex flex-row justify-between items-center rounded-full bg-co-white text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
                     Lorem Ipsum
-                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                    <svg class="hidden lg:block" width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="fill-co-dark" d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
                               fill="#262626"/>
+                    </svg>
+                    <svg class="block lg:hidden" width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="fill-co-dark" d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z" fill="#262626"/>
                     </svg>
                 </button>
             </div>
 
         </div>
-
-
-
 
     </div>
 
@@ -323,11 +321,14 @@
                         </div>
 
                     </div>
-                    <button class="flex justify-center items-center text-co-button text-co-white lg:text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-dark lg:bg-co-yellow gap-16">
+                    <button class="flex flex-row justify-between items-center rounded-full bg-co-dark lg:bg-co-yellow text-co-white lg:text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
                         Lorem Ipsum
-                        <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
-                                  fill="#FFFFFF"/>
+                        <svg class="hidden lg:block" width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="text-co-white lg:text-co-dark " d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                                  fill="#262626"/>
+                        </svg>
+                        <svg class="block lg:hidden" width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="text-co-white lg:text-co-dark " d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z" fill="#262626"/>
                         </svg>
                     </button>
                 </div>
@@ -407,11 +408,14 @@
 
             <div class="flex flex-col lg:flex-row gap-30p text-center lg:text-start lg:justify-between items-center justify-center lg:px-8 lg:mb-90p">
                 <h4 class="lg:basis-7/12 text-co-h3-bold lg:text-co-h4 w-[90%] lg:w-auto">Vulputate et pulvinar ethre Suspendisse tellus consecteur</h4>
-                <button class="lg:basis-4/12 flex justify-center items-center text-co-button text-co-dark pt-17p pb-18p px-38p lg:pt-22p lg:pb-6 lg:pl-50p lg:pr-52p rounded-full bg-co-yellow lg:bg-co-white gap-16 w-full lg:w-auto ">
+                <button class="flex flex-row justify-between items-center rounded-full bg-co-yellow lg:bg-co-white text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
                     Lorem Ipsum
-                    <svg width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
+                    <svg class="hidden lg:block" width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="fill-co-dark" d="M16.25 0.269531L14.4922 2.02734L20.2344 7.76953H0.0195312V10.2305H20.2344L14.4922 15.9727L16.25 17.7305L24.9805 9L16.25 0.269531Z"
                               fill="#262626"/>
+                    </svg>
+                    <svg class="block lg:hidden" width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="fill-co-dark" d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z" fill="#262626"/>
                     </svg>
                 </button>
             </div>
@@ -428,7 +432,6 @@
 
         </div>
     </div>
-
 
 </div>
 
