fix style: accordion item

--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
         <div class="overflow-hidden flex flex-col gap-3.5 lg:gap-6">
 
             <!-- item 1 -->
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
-                <div class="w-[90%] mx-auto overflow-hidden">
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="overflow-hidden">
                     <input type="checkbox" id="chk1">
                     <label for="chk1" class="flex flex-row justify-between cursor-pointer">
-                        <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
+                        <p class="text-co-mo-h2 lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
                         <img src="/assets/img/icon-plus.svg" alt=" ">
                         <img src="/assets/img/icon-remove.svg" alt=" " class="hidden">
                     </label>
@@ -362,8 +362,8 @@
                 </div>
             </div>
 
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
-                <div class="w-[90%] mx-auto overflow-hidden">
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="overflow-hidden">
                     <input type="checkbox" id="chk2">
                     <label for="chk2" class="flex flex-row justify-between cursor-pointer">
                         <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
@@ -374,8 +374,8 @@
                 </div>
             </div>
 
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
-                <div class="w-[90%] mx-auto overflow-hidden">
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="overflow-hidden">
                     <input type="checkbox" id="chk3">
                     <label for="chk3" class="flex flex-row justify-between cursor-pointer">
                         <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
@@ -386,8 +386,8 @@
                 </div>
             </div>
 
-            <div class="bg-co-white rounded-mobile py-30p lg:py-66p">
-                <div class="w-[90%] mx-auto overflow-hidden">
+            <div class="bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="overflow-hidden">
                     <input type="checkbox" id="chk4">
                     <label for="chk4" class="flex flex-row justify-between cursor-pointer">
                         <p class="text-co-mo-h2-bold lg:text-co-h5-sbold">Quam vehicula faucibus amet lorem. </p>
