fix style: four boxes in section 2

--- a/index.html
+++ b/index.html
@@ -147,12 +147,11 @@
         <div class="mx-auto max-w-9 flex flex-col-reverse lg:grid lg:grid-cols-2 gap-10 lg:gap-11 items-center pt-47p lg:pt-0">
 
             <!-- four boxes -->
-            <div class="mx-auto max-w-95 lg:max-w-full">
-
-                <div class="flex flex-col flex-wrap gap-5 lg:gap-60p  justify-between lg:grid lg:grid-cols-2">
+            <div class="flex flex-col gap-5 w-full">
+                <div class="flex flex-col gap-5 lg:gap-60p lg:grid lg:grid-cols-2">
 
                     <div class="bg-co-white rounded-box lg:box-desktop w-full pt-46p pb-52p lg:p-9">
-                        <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
+                        <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-[80%] mx-auto lg:w-full">
                             <img src="assets/img/img-1.png" alt=" ">
                             <div class="flex flex-col gap-9p items-start">
                                 <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2 text-co-dark">1</span><span class="text-[66px] font-bold text-co-yellow lg:text-co-h2">.</span>
