fix style: header logo

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <!--Header-->
 <div class="co-container">
-    <header class="flex justify-between align-middle h-58p pb-3 mt-5 md:mt-10">
-        <img alt="Logo" src="/assets/img/logo.png">
+    <header class="flex justify-between align-middle h-70p lg:h-24 pb-3 mt-5 md:mt-10">
+        <a href="#"><img alt="Logo" src="/assets/img/logo.png"></a>
         <div class="flex flex-row self-center items-center gap-1">
             <img alt="en" src="/assets/img/flag-en.svg">
             <label class="w-4 h-4 flex justify-center items-center"><img alt="Select country"
@@ -108,7 +108,7 @@
                         </svg>
                         <svg class="block lg:hidden" fill="none" height="15" viewBox="0 0 20 15" width="20"
                              xmlns="http://www.w3.org/2000/svg">
-                            <path class="fill-co-dark"
+                            <path class="fill-co-white"
                                   d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z"
                                   fill="#262626"/>
                         </svg>
@@ -379,7 +379,7 @@
                         </svg>
                         <svg class="block lg:hidden" fill="none" height="15" viewBox="0 0 20 15" width="20"
                              xmlns="http://www.w3.org/2000/svg">
-                            <path class="text-co-white lg:text-co-dark "
+                            <path class="fill-co-white lg:text-co-dark "
                                   d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z"
                                   fill="#262626"/>
                         </svg>
