rewrite button using tailwind layer, add hover animation

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- displays site properly based on user's device -->
 
-    <link href="dist/style.css" rel="stylesheet">
-    <link href="assets/img/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="dist/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/img/favicon.png" rel="icon" type="image/png">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
@@ -98,7 +98,7 @@
 
                 <div class="flex justify-center">
 
-                    <button class="flex flex-row justify-between items-center rounded-full bg-co-yellow text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
+                    <button class="btn btn-animation bg-co-yellow text-co-dark hover:border-co-dark hover:shadow-co-dark">
                         Lorem Ipsum
                         <svg class="hidden lg:block" fill="none" height="18" viewBox="0 0 25 18" width="25"
                              xmlns="http://www.w3.org/2000/svg">
@@ -108,7 +108,7 @@
                         </svg>
                         <svg class="block lg:hidden" fill="none" height="15" viewBox="0 0 20 15" width="20"
                              xmlns="http://www.w3.org/2000/svg">
-                            <path class="fill-co-white"
+                            <path class="fill-co-dark"
                                   d="M12.8844 0.617065L11.5322 1.96923L15.9493 6.3863H0.399414V8.27933H15.9493L11.5322 12.6964L12.8844 14.0486L19.6001 7.33281L12.8844 0.617065Z"
                                   fill="#262626"/>
                         </svg>
@@ -141,7 +141,7 @@
                             blandit rutrum at mauris enim pulvinar duis etiam duis vulputate et vulputate suspendisse
                             natoque id tellus consectetur pulvinar et. </p>
                     </div>
-                    <button class="flex flex-row justify-between items-center rounded-full bg-co-dark text-co-white w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
+                    <button class="btn btn-animation bg-co-dark text-co-white hover:border-co-white hover:shadow-co-white">
                         Lorem Ipsum
                         <svg class="hidden lg:block" fill="none" height="18" viewBox="0 0 25 18" width="25"
                              xmlns="http://www.w3.org/2000/svg">
@@ -243,7 +243,8 @@
                     Consectetur nibh velit magna consectetur leo. </p>
                 <h1 class="text-co-mo-h1 lg:text-co-h4 text-co-white lg:mb-10">Cursus Integer Conseq Aliquam
                     Tristique. </h1>
-                <button class="flex flex-row justify-between items-center rounded-full bg-co-white text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
+
+                <button class="btn btn-animation bg-co-white text-co-dark hover:border-co-yellow hover:shadow-co-yellow">
                     Lorem Ipsum
                     <svg class="hidden lg:block" fill="none" height="18" viewBox="0 0 25 18" width="25"
                          xmlns="http://www.w3.org/2000/svg">
@@ -369,7 +370,8 @@
                         </div>
 
                     </div>
-                    <button class="flex flex-row justify-between items-center rounded-full bg-co-dark lg:bg-co-yellow text-co-white lg:text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
+
+                    <button class="btn btn-animation bg-co-dark text-co-white hover:border-co-yellow hover:shadow-co-yellow">
                         Lorem Ipsum
                         <svg class="hidden lg:block" fill="none" height="18" viewBox="0 0 25 18" width="25"
                              xmlns="http://www.w3.org/2000/svg">
@@ -478,7 +480,8 @@
             <div class="flex flex-col lg:flex-row gap-30p text-center lg:text-start lg:justify-between items-center justify-center lg:px-8 lg:mb-90p">
                 <h4 class="lg:basis-7/12 text-co-h3-bold lg:text-co-h4 w-[90%] lg:w-auto">Vulputate et pulvinar ethre
                     Suspendisse tellus consecteur</h4>
-                <button class="flex flex-row justify-between items-center rounded-full bg-co-yellow lg:bg-co-white text-co-dark w-full max-w-[350px] h-60p lg:h-78p lg:w-350p text-co-button-mo lg:text-co-button px-38p pt-17p pb-18p lg:px-50p lg:pt-22p lg:pb-6">
+
+                <button class="btn btn-animation bg-co-white text-co-dark hover:border-co-yellow hover:shadow-co-yellow">
                     Lorem Ipsum
                     <svg class="hidden lg:block" fill="none" height="18" viewBox="0 0 25 18" width="25"
                          xmlns="http://www.w3.org/2000/svg">
